--- a/WebContent/registerForm.xhtml
+++ b/WebContent/registerForm.xhtml
@@ -15,28 +15,50 @@
 				<div class="container">
 
 					<div class="row">
-						<h2>Formulaires de création d'un utilisateur</h2>
+
+						<h2>Liste des utilisateurs:</h2>
 						<div class="col-md-6">
 							<div class="row">
+								<c:forEach
+									items="${userDAO.usersFromEntreprise(sessionScope.user.entreprise.id)}"
+									var="user">
+									<div class="col-md-12">
+										<dl>
+											<dt>
 
-								<form class="form">
-									<div   role="alert" id="infoZone" style='display: none'></div>
-									<div class="form-group">
-										<input type="text" placeholder="Nom de l'utilisateur"
-											name="username" id="username" class="form-control" />
+												<h:outputText value="${user.userName}"></h:outputText>
+											</dt>
+											<dd>
+												<h:outputText value="Option : Editer / Supprimer"></h:outputText>
+											</dd>
+										</dl>
 									</div>
-									<div class="form-group">
-										<input type="password" placeholder="Mot de passe"
-											name="password" id="password" class="form-control" />
-									</div>
-									<button type="button" id="submit"
-										class="form-control btn btn-success">Créer
-										l'utilisateur</button>
+								</c:forEach>
 
-								</form>
 							</div>
+
+
+						</div>
+						<div class="col-md-offset-1 col-md-5"
+							style="border-left: 1px solid grey;">
+							<form class="form">
+								<div role="alert" id="infoZone" style='display: none'></div>
+								<div class="form-group">
+									<input type="text" placeholder="Nom de l'utilisateur"
+										name="username" id="username" class="form-control" />
+								</div>
+								<div class="form-group">
+									<input type="password" placeholder="Mot de passe"
+										name="password" id="password" class="form-control" />
+								</div>
+								<button type="button" id="submit"
+									class="form-control btn btn-success">Créer
+									l'utilisateur</button>
+
+							</form>
 						</div>
 					</div>
+
 				</div>
 				<SCRIPT type="text/javascript" src="resources/js/registerForm.js"></SCRIPT>
 			</f:view>
