--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -5,7 +5,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>Internatial Collaboration Book Maker</title>
+<title>International Collaboration Book Maker</title>
 <link href="resources/css/yeti.min.css" rel="stylesheet" />
 <script src="resources/js/jquery-1.11.2.min.js"></script>
 <script src="resources/js/bootstrap.min.js"></script>
