--- a/WebContent/volume.xhtml
+++ b/WebContent/volume.xhtml
@@ -69,7 +69,7 @@
 					</div>
 
 				</div>
-				<SCRIPT type="text/javascript" src="resources/js/company.js"></SCRIPT>
+				<SCRIPT type="text/javascript" src="resources/js/volume.js"></SCRIPT>
 			</f:view>
 
 		</ui:define>
