--- a/WebContent/workPackages.xhtml
+++ b/WebContent/workPackages.xhtml
@@ -28,6 +28,7 @@
 														<h:outputText value="${workpackage.name}"></h:outputText>
 													</dt>
 													<dd>
+														<a onclick="deleteWP(${workpackage.id})" href="#">Supprimer</a>
 														<h:outputText value="Option : Editer / Supprimer"></h:outputText>
 													</dd>
 												</dl>
@@ -44,7 +45,8 @@
 														<h:outputText value="${workpackage.name}"></h:outputText>
 													</dt>
 													<dd>
-														<h:outputText value="Option : Editer / Supprimer"></h:outputText>
+													<a onclick="deleteWP(${workpackage.id})" href="#">Supprimer</a>
+														
 													</dd>
 												</dl>
 											</div>
