--- a/WebContent/deleteUser.xhtml
+++ b/WebContent/deleteUser.xhtml
@@ -16,7 +16,8 @@
 
 					<div class="row">
 						<c:set var="id" value="${sessionScope.user.id}" />
-						<h2>Liste des utilisateurs:</h2>
+						<h3>Utilisateurs</h3>
+						<HR />
 						<div class="col-md-6">
 							<div class="row">
 
