--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -28,7 +28,8 @@
 						<c:set var="nbInProgress" value="0" />
 						<c:set var="nbDone" value="0" />
 						<div class="col-md-5">
-							<h4>Liste des WorkPackages</h4>
+							<h3>WorkPackages</h3>
+							<hr/>
 							<div class="row">
 
 								<c:forEach items="${workPackageDAO.findAll()}" var="wp">
