--- a/WebContent/volume.xhtml
+++ b/WebContent/volume.xhtml
@@ -16,7 +16,8 @@
 
 					<div class="row">
 
-						<h2>Liste des volumes:</h2>
+						<h3>Volumes</h3>
+						<HR />
 						<div class="col-md-6">
 							<div class="row">
 
@@ -42,11 +43,11 @@
 
 
 
-<div class="col-md-offset-1 col-md-5"
+						<div class="col-md-offset-1 col-md-5"
 							style="border-left: 1px solid grey;">
 
-						<h2>Creation d'un volume :</h2>
-						
+							<h2>Creation d'un volume :</h2>
+
 							<div class="alert alert-danger" role="alert" id="errorsZone"></div>
 							<form class="form">
 								<div class="form-group">
